# Stocks_Screener

./: .gitignore  .graphify_detect.json  .graphify_uncached.txt  AGENTS.md  Appunti_Stocks_Screener.md  Appunti_Stocks_Screener.txt  Appunti_utilizzo_git.md  Appunti_utilizzo_git.txt  README.md  avvia_Stock_Screener.sh  config.db  config.db.test  database.py  debug_pyticker.py  errore_trovato.txt  euronext_downloader.py  finance_logic.py  full_server_log.txt  implementation_plan.md  investing_scraper.py  main.py  migrate_split_db.py  pyproject.toml  requirements.txt  schemas.py  scratch_check.py  scratch_check_divs.py  scratch_check_divs_complete.py  scratch_count_divs.py  scratch_count_divs_all.py  scratch_fetch_served_html.py  scratch_find_malformed_tags.py  scratch_find_mismatch.py  scratch_list_views.py  test_api.py  test_edge.py  test_local_parse.py  test_portfolio.py  tunnel_ssh.sh  verify_caching_v2.py  (+3 more)
.antigravitycli/: a742c847-a657-44a3-9043-da748f31c38e.json
graphify-out/: .graphify_chunk_01.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
liste_tickers/: DJ30_tickers.csv  Dow Jones 30.csv  Investing_AI_DOW10 (EUR)_posizioni_aperte.csv  ItalianStockTop5.csv  aex25.csv  dax40.csv  dax40.xlsx  fineco_dax40.xlsx  ftsemib40.csv  mapping_tickers - Copy.csv  mapping_tickers.csv  template_lista_tickers.csv  tickers_italiani.csv
scratch/: check_yf_keys.py  init_git.sh
static/: index.html  script.js  style.css
test/: scratch_find_all_unclosed.py  scratch_find_tag_matches.py  scratch_print_view_parents_bs4.py  (+4 more)
(+2 files in other folders)
